--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <div id="gridcontainer"></div>
+    <div class="slidercontainer">
+        <input type="range" min="4" max="8" value="4" class="slider" id="pixel-slider">
+        <output id="slider-output"></output>
+    </div>
 </body>
 </html>
