Display 4x4 as the default slider value upon load

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="gridcontainer"></div>
     <div class="slidercontainer">
         <input type="range" min="4" max="64" value="4" id="pixel-slider">
-        <output id="slider-output"></output>
+        <output id="slider-output">4 X 4</output>
     </div>
 </body>
 </html>
