Adjust slider steps to 4 and slider with to 400px

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="gridcontainer"></div>
     <div class="slidercontainer">
-        <input type="range" min="4" max="64" value="4" id="pixel-slider">
+        <input type="range" min="4" max="64" value="4" step="4" id="pixel-slider">
         <output id="slider-output">4 X 4</output>
     </div>
 </body>
