Add reset button

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <input type="range" min="4" max="64" value="4" step="4" id="pixel-slider">
         <output id="slider-output">4 X 4</output>
     </div>
+    <div class="buttoncontainer">
+        <button id="reset">Reset</button>
+    </div>
 </body>
 </html>
