Add normal and random button for color options

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <output id="slider-output">4 X 4</output>
     </div>
     <div class="buttoncontainer">
+        <p>Color mode</p>
+        <button id="normal">Normal</button>
+        <button id="random">Random</button>
         <button id="reset">Reset</button>
     </div>
 </body>
