Disable drag event to fix drag bug

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Etch a sketch</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="./etch.js" defer></script>
+    <BODY ondragstart="return false;" ondrop="return false;"></BODY>
 </head>
 <body>
     <div id="gridcontainer"></div>
