Remove normal button, add color picker

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="buttoncontainer">
         <p>Color mode</p>
-        <button id="normal">Normal</button>
+        <input type="color" id="color" name="Color" value="#fcba03">
         <button id="random">Random</button>
         <button id="reset">Reset</button>
     </div>
