--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p>Color mode</p>
         <input type="color" id="color" name="Color" value="#fcba03">
         <button id="random">Random</button>
+        <button id="eraser">Eraser</button>
         <button id="reset">Reset</button>
     </div>
 </body>
