--- a/index.html
+++ b/index.html
@@ -9,17 +9,26 @@
     <BODY ondragstart="return false;" ondrop="return false;"></BODY>
 </head>
 <body>
-    <div id="gridcontainer"></div>
-    <div class="slidercontainer">
-        <input type="range" min="4" max="64" value="4" step="4" id="pixel-slider">
-        <output id="slider-output">4 X 4</output>
-    </div>
-    <div class="buttoncontainer">
-        <p>Color mode</p>
-        <input type="color" id="color" name="Color" value="#fcba03">
-        <button id="random">Random</button>
-        <button id="eraser">Eraser</button>
-        <button id="reset">Reset</button>
+    <h1>Etch A Sketch</h1>
+    <div class="container">
+        <div class="buttoncontainer">
+            <h2>Color modes</h2>
+            <div id="swatch">
+                <input type="color" id="color" name="Color" value="#fcba03">
+                <h1>Pick</h1>
+                <h2>Your color</h2>
+            </div>
+            <div class="coloroptions"></div>
+            <button id="random">Randomized</button>
+            <button id="eraser">Eraser</button>
+            <button id="reset">Reset grid</button>
+            <div class="slidercontainer">
+                <h2>Adjust grid</h2>
+                <input type="range" min="4" max="64" value="4" step="4" id="pixel-slider">
+                <output id="slider-output">4 X 4</output>
+            </div>
+        </div>
+        <div id="gridcontainer"></div>
     </div>
 </body>
 </html>
